# shop-electronics

./: pyproject.toml
tests/: test_item.py
